# bevy-procedural

./: Cargo.toml  flake.nix
src/: camera.rs  character.rs  main.rs  physics.rs
