[package]
name = "bevy-procedural"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.1", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1

[profile.dev.packages."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
